--- a/Lesson_12_Grid/style/style.css
+++ b/Lesson_12_Grid/style/style.css
@@ -3,31 +3,23 @@
   padding: 0;
 }
 
-
 body {
   background-color: rgb(43, 41, 41);
 }
 
 .grid_container {
-    
-   
-  
-
   display: grid;
-  grid-template-columns: repeat(3, 15%)  repeat(2, 20%);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-
-
+  /* grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr 1fr; */
+ grid-template: 1fr 1fr 2fr / 1fr 2fr 1fr;
+  grid-gap: 20px;
 }
 
 .grid_item {
   border: 1px dashed rgb(10, 131, 230);
   border-radius: 20px;
-  height: 200px;
   padding: 20px;
   text-align: center;
- color: antiquewhite;
- background-color: black;
-
+  color: antiquewhite;
+  background-color: black;
 }
