--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/Contacts/index.module.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/Contacts/index.module.css
@@ -25,6 +25,10 @@
   display: flex;
 }
 
+.phone_and_mail p {
+  padding: 10px;
+}
+
 /* .contacts_info p:nth-child(3) {
   color: rgb(11, 134, 134);
   margin: 30px;
