Added contacts card

--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/ContactsForm/index.module.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/ContactsForm/index.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   position: relative;
 }
 
@@ -53,4 +53,4 @@ button {
   font-weight: 400px;
   margin-top: 50px;
   margin-left: 265px;
-}
+} */
