--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/AbautUsCards/index.module.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/AbautUsCards/index.module.css
@@ -30,3 +30,14 @@
   font-weight: 700;
   line-height: 17px;
 }
+
+@media (max-width: 1100px) {
+  .abaut_us_card {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .abaut_us_card p:nth-child(2) {
+    width: 150px;
+  }
+}
