--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/AboutUs/index.module.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/AboutUs/index.module.css
@@ -1,4 +1,4 @@
-.abaut_us_section {
+.about_us_section {
   display: flex;
   justify-content: space-between;
   padding: 140px 0;
@@ -9,14 +9,14 @@
   display: block;
 }
 
-.abaut_us_info {
+.about_us_info {
   width: 445px;
   font-size: 18px;
   font-weight: 300px;
   line-height: 25px;
 }
 
-.abaut_us_section h2 {
+.about_us_section h2 {
   margin-bottom: 60px;
 }
 
@@ -26,4 +26,25 @@
   grid-template-rows: repeat(2, 255px);
   gap: 30px;
   padding-top: 24px;
+}
+
+@media (max-width: 1100px) {
+  .about_us_section {
+    flex-direction: column;
+    padding: 66px 0 76px 0;
+  }
+
+  .about_us_cards {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 120px);
+  }
+
+  .about_us_info {
+    width: 100%;
+    padding: 35px 0;
+  }
+
+  .about_us_section h2 {
+    margin-bottom: 0;
+  }
 }
