--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/ContactForm1/index.module.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/ContactForm1/index.module.css
@@ -49,7 +49,13 @@
   font-weight: 400;
   align-self: end;
   margin: 50px 0;
-
-  /* margin-top: 50px;
-  margin-left: 500px; */
 }
+
+@media (max-width: 1100px) {
+  .contacts_form {
+    width: 100%;
+  }
+}
+
+/* margin-top: 50px;
+  margin-left: 500px; */
