--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/Contacts/index.module.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/Contacts/index.module.css
@@ -23,10 +23,22 @@
 .phone_and_mail {
   margin-top: 80px;
   display: flex;
+  gap: 40px;
 }
 
-.phone_and_mail p {
+/* .phone_and_mail p {
   padding: 10px;
+} */
+
+@media (max-width: 1100px) {
+  .contacts_block {
+    flex-direction: column;
+  }
+
+  .contacts_info {
+    margin-bottom: 80px;
+    width: 100%;
+  }
 }
 
 /* .contacts_info p:nth-child(3) {
