--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/style.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/style.css
@@ -25,3 +25,13 @@ h2 {
   font-size: 48px;
   font-weight: 900;
 }
+
+@media (max-width: 1100px) {
+  .wrapper {
+    max-width: 630px;
+  }
+
+  .subheader {
+    display: none;
+  }
+}
