--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/Nav/index.module.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/Nav/index.module.css
@@ -26,8 +26,25 @@
 @media (max-width: 1100px) {
   .menu_icon {
     display: flex;
+    cursor: pointer;
+    font-size: 40px;
   }
+
+  .nav_block {
+    position: relative;
+  }
+
   .nav_menu {
-    display: none;
+    grid-template-columns: 1fr;
+    right: 0;
+    top: 100%;
+    position: absolute;
+    background-color: transparent;
+    transform: translateY(-150%);
+    color: rgb(236, 17, 17);
+  }
+
+  .nav_menu.active {
+    transform: translateY(0);
   }
 }
