--- a/JSCurs/Lesson 6 React Posts_master/post_master/src/components/Post/index.module.css
+++ b/JSCurs/Lesson 6 React Posts_master/post_master/src/components/Post/index.module.css
@@ -1,6 +1,7 @@
 .post_item {
   position: relative;
   border: 2px solid palevioletred;
+  border-radius: 10px;
   background-color: azure;
   padding: 15px;
   margin: 10px;
@@ -24,4 +25,11 @@
   background-color: blue;
   color: white;
   border-color: transparent;
+}
+
+.cross {
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
