--- a/JSCurs/Lesson 8 React Fetch Master2/fetch-master2/src/components/Users/index.module.css
+++ b/JSCurs/Lesson 8 React Fetch Master2/fetch-master2/src/components/Users/index.module.css
@@ -1,9 +1,16 @@
 .user_style {
+  display: flex;
+  flex-direction: column;
   border: 2px solid gray;
   border-radius: 10px;
   width: 250px;
+  align-items: center;
+  justify-content: center;
 }
 
 .user_style img {
-  max-width: 200px;
+  /* max-width: 200px; */
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
