--- a/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/ContactForm1/index.module.css
+++ b/JSCurs/Lesson 4 React SaitTemplate/site_template/src/components/ContactForm1/index.module.css
@@ -59,3 +59,15 @@
 
 /* margin-top: 50px;
   margin-left: 500px; */
+
+.err1 {
+  color: red;
+}
+
+.err2 {
+  color: red;
+}
+
+.err3 {
+  color: red;
+}
