--- a/JSCurs/Lesson 9 React useForm/use-form/src/components/FormItem/index.module.css
+++ b/JSCurs/Lesson 9 React useForm/use-form/src/components/FormItem/index.module.css
@@ -7,8 +7,8 @@
 .form_item {
   position: relative;
   width: 420px;
-  border: 1px solid black;
-  border-radius: 20px;
+  /* border: 1px solid black; */
+  /* border-radius: 20px; */
   padding: 32px;
 }
 
