--- a/JSCurs/Lesson14React redux-fetch/redux-fetch/src/pages/CartPage/index.module.css
+++ b/JSCurs/Lesson14React redux-fetch/redux-fetch/src/pages/CartPage/index.module.css
@@ -6,8 +6,8 @@
 }
 
 .carts_container_style {
-  padding: 160px;
-  height: 500px;
+  padding: 160px 0 0 0;
+min-height: 500px;
 }
 
 .total_container {
