--- a/JSCurs/Lesson14React redux-fetch/redux-fetch/src/components/CartCard/index.module.css
+++ b/JSCurs/Lesson14React redux-fetch/redux-fetch/src/components/CartCard/index.module.css
@@ -3,9 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 20px;
 }
 
-.img {
+.cart_card_container img {
   width: 33px;
   height: 50px;
   background-color: rgb(187, 237, 237);
